--- a/cas-shiros/cas-shiros-app/src/main/webapp/WEB-INF/web.xml
+++ b/cas-shiros/cas-shiros-app/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,22 @@
 
     <display-name>CAS Shiro demo : application</display-name>
     
+    <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			classpath:shiro-config.xml
+		</param-value>
+	</context-param>
+    
+    <!-- 类加载监听器 -->
+    <listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!-- 负责清理JavaBeans Introspector的使用而引起的缓冲泄露 ，主要应用于struts quarz 等框架-->
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
+	
     <!-- 单点登出监听器 -->
     <listener>  
         <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>  
@@ -19,7 +35,22 @@
 	    <url-pattern>/*</url-pattern>  
 	 </filter-mapping>
 	 
-	<!--单点登录验证 -->
+	<!-- Spring方式单点登录验证 -->
+	<filter>  
+        <filter-name>shiroFilter</filter-name>  
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>  
+        <init-param>  
+            <param-name>targetFilterLifecycle</param-name>  
+            <param-value>true</param-value>  
+        </init-param>  
+    </filter>  
+      
+    <filter-mapping>  
+        <filter-name>shiroFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>
+	 
+	<!--普通单点登录验证
     <filter>
         <filter-name>ShiroFilter</filter-name>
         <filter-class>org.apache.shiro.web.servlet.IniShiroFilter</filter-class>
@@ -28,5 +59,6 @@
         <filter-name>ShiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+	 -->
+	 
 </web-app>
