1、项目优化：资源过滤和一键启动。

--- a/cas-shiros/cas-shiros-server/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-shiros/cas-shiros-server/src/main/webapp/WEB-INF/cas.properties
@@ -103,7 +103,7 @@ host.name=cas01.example.org
 # log4j.refresh.interval=60000
 
 #database
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/casdemo
-jdbc.username=root
-jdbc.password=
+jdbc.driverClassName=${jdbc.driver}
+jdbc.url=${jdbc.url}
+jdbc.username=${jdbc.username}
+jdbc.password=${jdbc.password}
