--- a/cas-shiros/pom.xml
+++ b/cas-shiros/pom.xml
@@ -16,6 +16,14 @@
 		<jdbc.driver.groupId>mysql</jdbc.driver.groupId>
 		<jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
 		<jdbc.driver.version>5.1.25</jdbc.driver.version>
+		<sql.type>mysql</sql.type>
+		<jdbc.database.name>casdemo</jdbc.database.name>
+		<host.url>localhost</host.url>
+		<jdbc.username>root</jdbc.username>
+		<jdbc.password></jdbc.password>
+		<jdbc.url>jdbc:mysql://${host.url}:3306/${jdbc.database.name}</jdbc.url>
+		<cdbi.jdbc.url>jdbc:mysql://${host.url}:3306/mysql</cdbi.jdbc.url>
+		<jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
