1、多系统demo演示成功

--- a/cas-shiros/pom.xml
+++ b/cas-shiros/pom.xml
@@ -62,6 +62,7 @@
 	</build>
 	<modules>
 		<module>cas-shiros-app</module>
+		<module>cas-shiros-app-admin</module>
 		<module>cas-shiros-server</module>
 		<module>cas-shiros-db</module>
 	</modules>
