1、修改成单服务器启动模式。优点启动简单，缺点维护困难，出当前子项目外其它子项目调试都需要重新打包。

--- a/cas-shiros/cas-shiros-app/pom.xml
+++ b/cas-shiros/cas-shiros-app/pom.xml
@@ -127,6 +127,10 @@
 							<war>${basedir}/../cas-shiros-server/target/cas-shiros-server.war</war>
 							<contextPath>/cas</contextPath>
 						</contextHandler>
+						<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+							<war>${basedir}/../cas-shiros-app-admin/target/cas-shiros-app-admin.war</war>
+							<contextPath>/app-admin</contextPath>
+						</contextHandler>
 					</contextHandlers>
 				</configuration>
 			</plugin>
