--- a/cas-shiros/pom.xml
+++ b/cas-shiros/pom.xml
@@ -62,6 +62,9 @@
 					<artifactId>maven-eclipse-plugin</artifactId>
 					<version>2.9</version>
 					<configuration>
+						<sourceExcludes>
+							<sourceExclude>**/.svn/**</sourceExclude>
+         				</sourceExcludes>
 						<wtpversion>2.0</wtpversion>
 					</configuration>
 				</plugin>
@@ -69,7 +72,7 @@
 		</pluginManagement>
 	</build>
 	<modules>
-		<module>cas-shiros-parent</module>
+		<module>cas-shiros-dependency-infrastructure</module>
 		<module>cas-shiros-app</module>
 		<module>cas-shiros-app-admin</module>
 		<module>cas-shiros-server</module>
