--- a/cas-shiros/cas-shiros-app-admin/src/main/resources/application.properties
+++ b/cas-shiros/cas-shiros-app-admin/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 #\u5355\u70b9\u767b\u5f55\u670d\u52a1\u5668\u5730\u5740
-cas.host=${cas.host}
+cas.host=http://localhost:8080/cas
+my.host=http://localhost:8080/app-admin
