1、升级了一些Jar。 2、CAS登录登出默认使用Bootstrap风格。

--- a/cas-shiros/cas-shiros-server/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-shiros/cas-shiros-server/src/main/webapp/WEB-INF/cas.properties
@@ -30,8 +30,11 @@ cas.securityContext.ticketValidator.casServerUrlPrefix=${server.prefix}
 cas.securityContext.status.allowedSubnet=127.0.0.1
 
 
-cas.themeResolver.defaultThemeName=cas-theme-default
-cas.viewResolver.basename=default_views
+# \u4fee\u6539\u9ed8\u8ba4\u76ae\u80a4
+#cas.themeResolver.defaultThemeName=cas-theme-default
+#cas.viewResolver.basename=default_views
+cas.themeResolver.defaultThemeName=cas-theme-twitter-bootstrap
+cas.viewResolver.basename=twitter-bootstrap-views
 
 ##
 # Unique CAS node name
